CP8117P53-83: Update Swagger API Specs
